--- a/SmartSafe/src/app.css
+++ b/SmartSafe/src/app.css
@@ -1,1 +1,60 @@
 @import "tailwindcss";
+
+html{
+    scroll-behavior: smooth;
+}
+
+* {
+    font-family: 'Open Sans', sans-serif;
+}
+
+h1, h2, h3, .poopins{
+    font-family: 'Poppins', sans-serif;
+}
+
+span {
+    font-family: inherit;
+    font-weight: inherit;
+}
+
+.bgGrid {
+    background-size: 40px 40px;
+    background-image: linear-gradient(to right, grey 1px, transparent 1px), linear-gradient(to bottom, grey 1px, transparent 1px);
+}
+
+
+button,
+.button {
+    border-radius: 30px;
+    border: 1px solid transparent;
+    padding: 0.6em 2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: gray-900;
+    cursor: pointer;
+    transition: border-color 0.2s;
+}
+
+
+button:hover{
+    border-color: blue;
+}
+
+button:focus,
+button:focus-visible{
+    outline: 4px auto -webkit-focus-ring-color;
+}
+
+.SpesialBTN {
+    border-color: blue;
+}
+
+.SpesialBTNDark {
+    background: blue;
+    color: white;
+}
+
+.SpesialBTN:hover {
+    border-color: blue;
+}
