--- a/SmartSafe/src/app.css
+++ b/SmartSafe/src/app.css
@@ -1,14 +1,31 @@
 @import "tailwindcss";
 
-.h-screen-10 {
-  height: calc(100vh - 40px);
-  height: calc(var(--vh, 1vh) * 100 - 40px);
+:global(:root) {
+  --vh: 1vh;
 }
 
 .map-container {
   position: absolute;
   top: 0;
   width: 100%;
+  height: calc(var(--vh, 1vh) * 100 - 40px);
+  overflow: hidden;
+}
+
+.map-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.map-element {
+  width: 100%;
+  height: 100%;
+}
+
+.h-screen-10 {
+  height: calc(100vh - 40px);
   height: calc(var(--vh, 1vh) * 100 - 40px);
 }
 
